syntax = "proto3";
package calendar;

import "google/protobuf/timestamp.proto";
import "events.proto";

message changeEventRequest {
    Event event = 1;
    string id = 2;
}

message changeEventResult {
    string error = 1;
    bool result = 2;
}

message getResult {
    string error = 1;
    EventList events = 2;
}

message getRequest {
    google.protobuf.Timestamp dateTime = 1;
}

service API {
    rpc insertEvent(Event) returns(changeEventResult) {}
    rpc updateEvent(changeEventRequest) returns(changeEventResult) {}
    rpc removeEvent(changeEventRequest) returns(changeEventResult) {}
    rpc getDailyEvents(getRequest) returns(getResult) {}
    rpc getWeeklyEvents(getRequest) returns(getResult) {}
    rpc getMonthlyEvents(getRequest) returns(getResult) {}
}